--- a/SzechuanSim.vcxproj
+++ b/SzechuanSim.vcxproj
@@ -65,6 +65,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="sauce.cpp" />
+    <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="sauce.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
